Update link api
